# benny

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_MESH_RESUME_PLAN.md  README.md  SWARM_VS_STUDIO.md  benny.bat  benny.sh  benny_cli.py  benny_swarm_cli.py  check_mp.py  debug_out.txt  debug_workflows_utf8.json  docker-compose.yml  extracted_outputs.json  failed_llm_output_98046.txt  failed_llm_output_98220.txt  failed_llm_output_98480.txt  failed_llm_output_98602.txt  failed_llm_output_99655.txt  fix_ports.py  fix_ports2.py  lemonade_models.json  lineage_test.txt  manage_llm.bat  manifest.json  pyproject.toml  requirement.md  requirements.txt  run_output.txt  run_output_final.txt  run_output_no_lineage.txt  run_output_qwen.txt  run_output_qwen_final.txt  run_output_v4.txt  run_output_v5.txt  run_output_v6.txt  scratch_test_graph.py  (+12 more)
.claude/: settings.local.json
.claude/worktrees/epic-chaum-319b53/: README.md  UNIVERSAL_GRAPH_INDEX_PLAN.md  lemonade_models_utf8.json  manage_llm.bat  pyproject.toml  start_all.bat  test_doc.txt  test_emoji.md  test_output.txt  test_pdf_full.py  test_pdf_pages.py  trace.txt  verify_unif_lineage.py  verify_ux_backend.py
.claude/worktrees/epic-chaum-319b53/architecture/: GRAPH_SCHEMA.md  MASTER_PROMPT_HIGHER_MODEL.md  PAIN_POINTS_AND_VISION.md  SAD.md  run_live_scan.py  run_raw_ast_extraction.py
.claude/worktrees/epic-chaum-319b53/architecture/research/: ROOT_CAUSE_ANALYSIS.md
.claude/worktrees/epic-chaum-319b53/benny/: __init__.py
.claude/worktrees/epic-chaum-319b53/benny/a2a/: client.py  models.py  registry.py  server.py
.claude/worktrees/epic-chaum-319b53/benny/api/: __init__.py  chat_routes.py  etl_routes.py  file_routes.py  notebook_routes.py  rag_routes.py  studio_executor.py  task_routes.py  workspace_routes.py
.claude/worktrees/epic-chaum-319b53/benny/core/: adaptive_rag.py  event_bus.py  litert_engine.py  logging_service.py  state.py  task_manager.py  workspace.py
.claude/worktrees/epic-chaum-319b53/benny/gateway/: __init__.py  rbac.py
.claude/worktrees/epic-chaum-319b53/benny/governance/: aer_decorator.py  audit.py  operating_manual.py  tracing.py
.claude/worktrees/epic-chaum-319b53/benny/graph/: __init__.py  clustering_service.py  discovery_swarm.py  triples.py  wave_scheduler.py  workflow.py
.claude/worktrees/epic-chaum-319b53/benny/live/: __init__.py
.claude/worktrees/epic-chaum-319b53/benny/persistence/: __init__.py  checkpointer.py  workflow_storage.py
.claude/worktrees/epic-chaum-319b53/docs/: AUDIT_DEBUG_GUIDE.md  README.md  knowledge_graph_architecture.md  tech_debt.md
.claude/worktrees/epic-chaum-319b53/frontend/: TEST_WORKFLOW_UX.md  ast_facts.json
.claude/worktrees/epic-chaum-319b53/scratch/: check_labels.py  check_neo4j.py  check_path.py  debug_agent.py  get_models.py  inspect_entity.py  task_events.json  test_dataclass.py  test_facet.py  test_hitl_sse.py  test_ingest.py  test_json_repair.py  test_langgraph_topology.py  test_planner_robustness.py  test_tree_sitter_v3.py  test_ts_query_ts.py  verify_constraint_fix.py
.claude/worktrees/epic-chaum-319b53/scripts/: audit_debug.py  diagnose_workflow_failures.py  setup_litert.py
.claude/worktrees/epic-chaum-319b53/skills/: README.md  TOOLS.md
.claude/worktrees/epic-chaum-319b53/tests/: test_adaptive_rag.py  test_gateway.py  test_lineage_uuid.py  test_swarm_recursion.py  test_swarm_workflow.py  test_wave_scheduler.py
docs/requirements/9/pypes/: data_trades.csv  pyproject.toml  transformed_trades.parquet
(+588 files in other folders)
