[project]
name = "benny"
version = "1.0.0"
description = "Deterministic Graph Workflow Platform with Multi-Model AI Orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "litellm>=1.60.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "openlineage-python>=1.27.0",
    "arize-phoenix>=5.0.0",
    "python-multipart>=0.0.20",
    "pypdf>=5.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benny"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, isolated unit tests (default)",
    "integration: cross-module integration tests (may touch disk, network mocks)",
    "bdd: BDD scenarios driven by pytest-bdd feature files",
    "os_launcher: platform-specific OSLauncher tests — runs on the launcher-matrix CI job",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["benny"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
