[project]
name = "pypes-engine"
version = "0.1.0"
description = "A design-first, contract-driven transformation pipeline engine for AI agents."
authors = [
    { name = "Community Contributor", email = "community@pypes.io" }
]
dependencies = [
    "pydantic>=2.0.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
